<resources>

    <string name="app_name">DiaData</string>

    <!-- Fragmento formulário -->
    <string name="bem_vindo">Bem-vindo!</string>
    <string name="frase_sob_bem_vindo">Preencha o seguinte formulário para podermos conhecer mais um bocado de si!</string>

    <!-- Formulário -->
    <string name="nome_form">nome</string>
    <string name="apelido_form">apelido</string>
    <string name="idade_form">idade</string>
    <string name="genero_form">gênero</string>
    <string name="botao_submeter">Submeter</string>
    <string name="disclaimer_utilizadores">Concordo com o facto de a presente aplicação não ser uma ferramenta médica precisa, sendo o seu propósito ser um auxiliar para os seus utilzadores.</string>

    <!-- Lista de diabetes -->
    <string-array name="diabetes">
        <item>Tipo 1</item>
        <item>Tipo 2</item>
    </string-array>

    <!-- Lista de gêneros -->
    <string-array name="gender">
        <item>Masculino</item>
        <item>Feminino</item>
        <item>Outro</item>
    </string-array>

    <!-- Fragmento dashboard -->
    <string name="welcome_sentence_user">Bem-vindo, %s</string>
    <string name="profile">Perfil</string>
    <string name="notifications">Notificações</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name_and_forename">%s</string>
    <string name="mensagem_bem_vindo">Bem-vindo,</string>
    <string name="signup_to_follow_your_diadata">SignUp to follow your DiaData</string>
    <string name="genero">Gênero</string>
    <string name="tipo_de_diabetes">Tipo de diabetes</string>
    <string name="idade">Idade</string>
    <string name="apelido">Apelido</string>
    <string name="nome">Nome</string>
    <string name="profile_name_info">%s</string>
    <string name="Medicao">Medição</string>
    <string name="h_s_horas">há %s horas</string>
    <string name="gramas">%s g</string>
    <string name="s_unidade_s">%s unidade(s)</string>

    <string-array name="food_nome">
        <item>Leite</item>
        <item>Iogurte</item>
        <item>Queijo</item>
        <item>Fiambre</item>
        <item>Peixe</item>
        <item>Coelho</item>
        <item>Pão</item>
        <item>Bolacha Maria</item>
        <item>Couve Galega</item>
        <item>Ovo</item>
        <item>Arroz</item>
        <item>Esparguete</item>
        <item>Noz</item>
        <item>Alface</item>
        <item>Batata</item>
        <item>Laranja</item>
        <item>Maça</item>
        <item>Uva</item>
        <item>Amêndoa</item>
        <item>Amendoim</item>
    </string-array>

    <string-array name="food_hidratos">
        <item>4.6</item>
        <item>4.3</item>
        <item>1.5</item>
        <item>0.5</item>
        <item>0</item>
        <item>0.5</item>
        <item>59.9</item>
        <item>82.6</item>
        <item>2.3</item>
        <item>0.6</item>
        <item>78.1</item>
        <item>79.6</item>
        <item>5</item>
        <item>0.2</item>
        <item>20</item>
        <item>10.2</item>
        <item>13</item>
        <item>22</item>
        <item>7.5</item>
        <item>8.5</item>
    </string-array>

    <string-array name="food_int_type">
        <item>4</item>
        <item>4</item>
        <item>4</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>1</item>
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>1</item>
        <item>1</item>
        <item>6</item>
        <item>2</item>
        <item>1</item>
        <item>3</item>
        <item>3</item>
        <item>3</item>
        <item>6</item>
        <item>6</item>
    </string-array>

    <!-- Lista de tipos de Alimento -->
    <string-array name="food_type">
        <item>Carboidratos</item>
        <item>Verduras e Legumes</item>
        <item>Frutas</item>
        <item>Leite e derivados</item>
        <item>Carnes e Ovos</item>
        <item>Leguminosas e Oleaginosas</item>
        <item>Óleos e Gurduras</item>
        <item>Açucares e Doces</item>
    </string-array>

</resources>
